--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="https://t4.ftcdn.net/jpg/01/04/78/75/360_F_104787586_63vz1PkylLEfSfZ08dqTnqJqlqdq0eXx.jpg" alt="" />
+										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Magna</h2>
