--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 							<header>
 								<h1>The Data Professional: Portfolio<br />
 								template designed by <a href="http://html5up.net">HTML5 UP</a>.</h1>
-								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p>
+								<h2>By Ruby C. Murphy</h2>
+								<p>Created in support of <i>The Data Professional Microcredenital</i></p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
