--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>The Data Professional: Portfolio<br />
-								template designed by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+								<h1>The Data Professional: Portfolio</h1>
+								<p><b></b>template designed by <a href="http://html5up.net">HTML5 UP</a></b></p>
 								<h2>By Ruby C. Murphy</h2>
 								<p>Created in support of <i>The Data Professional Microcredenital</i></p>
 								<p>Welcome to my portfolio created in support of The Data Professional Microcredential.</p>
