--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<div class="inner">
 							<header>
 								<h1>The Data Professional: Portfolio</h1>
-								<p><b></b>template designed by <a href="http://html5up.net">HTML5 UP</a></b></p>
+								<p><b>template designed by <a href="http://html5up.net">HTML5 UP</a></b></p>
 								<h2>By Ruby C. Murphy</h2>
 								<p>Created in support of <i>The Data Professional Microcredenital</i></p>
 								<p>Welcome to my portfolio created in support of The Data Professional Microcredential.</p>
