Added link to Reflections.html

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Reflection</h2>
+									<a href="Reflections.html">
+										<h2>Reflections</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
