--- a/Reflections.html
+++ b/Reflections.html
@@ -52,12 +52,12 @@
 							
 						</div>
 					</div>
-	                                <div class="table-wrapper">
+	                                                                <div class="table-wrapper">
 										<table>
 											<thead>
 												<tr>
-													<th>Name</th>
-													<th>Description</th>
+													<th>Unit</th>
+													<th>Thoughts</th>
 													<th>Price</th>
 												</tr>
 											</thead>
@@ -65,34 +65,26 @@
 												<tr>
 													<td>Item One</td>
 													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
 												</tr>
 												<tr>
 													<td>Item Two</td>
 													<td>Vis ac commodo adipiscing arcu aliquet.</td>
-													<td>19.99</td>
 												</tr>
 												<tr>
 													<td>Item Three</td>
 													<td> Morbi faucibus arcu accumsan lorem.</td>
-													<td>29.99</td>
 												</tr>
 												<tr>
 													<td>Item Four</td>
 													<td>Vitae integer tempus condimentum.</td>
-													<td>19.99</td>
 												</tr>
 												<tr>
 													<td>Item Five</td>
 													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
 												</tr>
 											</tbody>
 											<tfoot>
-												<tr>
-													<td colspan="2"></td>
-													<td>100.00</td>
-												</tr>
+
 											</tfoot>
 										</table>
 									</div>
