add div class inner.html

--- a/Reflections.html
+++ b/Reflections.html
@@ -52,6 +52,7 @@
 							
 						</div>
 					</div>
+					<div class="inner">
 								<section>
 									<div class="table-wrapper">
 										<table class="alt">
@@ -98,7 +99,7 @@
 										</table>
 									</div>
 								</section>
-					
+					</div>
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
