--- a/Reflections.html
+++ b/Reflections.html
@@ -52,34 +52,36 @@
 							
 						</div>
 					</div>
-					<div class="inner">
-								<section>
-									<div class="table-wrapper">
-										<table class="alt">
-											<thead>
-												<tr>
-													<th>Name</th>
-													<th>Description</th>
-													<th>Price</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>Item One</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Two</td>
-													<td>Vis ac commodo adipiscing arcu aliquet.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Three</td>
-													<td> Morbi faucibus arcu accumsan lorem.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
+
+					<div id="main">				
+						<div class="inner">
+							<section>
+								<div class="table-wrapper">
+									<table class="alt">
+										<thead>
+											<tr>
+												<th>Name</th>
+												<th>Description</th>
+												<th>Price</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td>Item One</td>
+												<td>Ante turpis integer aliquet porttitor.</td>
+												<td>29.99</td>
+											</tr>
+											<tr>
+												<td>Item Two</td>
+												<td>Vis ac commodo adipiscing arcu aliquet.</td>
+												<td>19.99</td>
+											</tr>
+											<tr>
+												<td>Item Three</td>
+												<td> Morbi faucibus arcu accumsan lorem.</td>
+												<td>29.99</td>
+											</tr>
+											<tr>
 													<td>Item Four</td>
 													<td>Vitae integer tempus condimentum.</td>
 													<td>19.99</td>
@@ -89,17 +91,15 @@
 													<td>Ante turpis integer aliquet porttitor.</td>
 													<td>29.99</td>
 												</tr>
-											</tbody>
+										</tbody>
 											<tfoot>
-												<tr>
-													<td colspan="2"></td>
-													<td>100.00</td>
-												</tr>
+												
 											</tfoot>
-										</table>
-									</div>
-								</section>
-					</div>
+									</table>
+								</div>
+							</section>
+						</div>
+			 		</div>
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
