--- a/Reflections.html
+++ b/Reflections.html
@@ -62,35 +62,28 @@
 											<tr>
 												<th>Name</th>
 												<th>Description</th>
-												<th>Price</th>
 											</tr>
 										</thead>
 										<tbody>
 											<tr>
-												<td>Item One</td>
-												<td>Ante turpis integer aliquet porttitor.</td>
-												<td>29.99</td>
+												<td>Week One</td>
+												<td><p>Include info on the first week here.</p></td>
 											</tr>
 											<tr>
-												<td>Item Two</td>
-												<td>Vis ac commodo adipiscing arcu aliquet.</td>
-												<td>19.99</td>
+												<td>Week Two</td>
+												<td><p>Include on info on week 2 here</p>.</td>
 											</tr>
 											<tr>
-												<td>Item Three</td>
+												<td>Week Three</td>
 												<td> Morbi faucibus arcu accumsan lorem.</td>
-												<td>29.99</td>
 											</tr>
 											<tr>
-													<td>Item Four</td>
-													<td>Vitae integer tempus condimentum.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Five</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
+												<td>Item Four</td>
+												<td>Vitae integer tempus condimentum.</td>												</tr>
+											<tr>
+												<td>Item Five</td>
+												<td>Ante turpis integer aliquet porttitor.</td>
+											</tr>
 										</tbody>
 											<tfoot>
 												
