Update table Week 1.html
Small paragraph on the first unit added

--- a/Reflections.html
+++ b/Reflections.html
@@ -60,28 +60,28 @@
 									<table class="alt">
 										<thead>
 											<tr>
-												<th>Name</th>
-												<th>Description</th>
+												<th>Week</th>
+												<th>Reflection and highlights</th>
 											</tr>
 										</thead>
 										<tbody>
 											<tr>
 												<td>Week One</td>
-												<td><p>Include info on the first week here.</p></td>
+												<td><p>Much of my first week on the course has included getting my head around the more technical aspects. For example, I got started on putting my digital portfolio together and successfully used a HTML template. My highlight for this week is feeling more confident with GitHub and using it efficiently as I start building my portfolio.</p></td>
 											</tr>
 											<tr>
 												<td>Week Two</td>
-												<td><p>Include on info on week 2 here</p>.</td>
+												<td><p>Include on info on week 2 here.</p></td>
 											</tr>
 											<tr>
 												<td>Week Three</td>
 												<td> Morbi faucibus arcu accumsan lorem.</td>
 											</tr>
 											<tr>
-												<td>Item Four</td>
+												<td>Week Four</td>
 												<td>Vitae integer tempus condimentum.</td>												</tr>
 											<tr>
-												<td>Item Five</td>
+												<td>Week Five</td>
 												<td>Ante turpis integer aliquet porttitor.</td>
 											</tr>
 										</tbody>
