--- a/Reflections.html
+++ b/Reflections.html
@@ -47,7 +47,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Reflections</h1>
-							<span class="image main"><img src="laptops on table.jpg" alt="People sat around a table with laptops" /></span> <!-- change image -->
+							<span class="image main"><img src="images/laptops on table.jpg" alt="People sat around a table with laptops" /></span> <!-- change image -->
 							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
 							
 						</div>
