--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/cellophane.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Summary: Collaborative Discussion</h2>
@@ -82,7 +82,7 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/neon.jpg" alt="" />
 									</span>
 									<a href="Reflections.html">
 										<h2>Reflections</h2>
@@ -93,7 +93,7 @@
 								</article>
 								<article class="style4">
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/circuit.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2> </h2>
@@ -104,7 +104,7 @@
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="images/starburst.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2> </h2>
