--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic test.html">About Me</a></li>
-							<li><a href="generic.html">Summary: Collaborative Discussion/a></li>
+							<li><a href="About Me.html">About Me</a></li>
+							<li><a href="Discussion Summ.html">Collaborative Discussion</a></li>
 							<li><a href="Reflections.html">Refletions</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
