--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="About Me.html">About Me</a></li>
-							<li><a href="Discussion Summ.html">Collaborative Discussion</a></li>
+							<li><a href="Collab_Discussion.html">Collaborative Discussion</a></li>
 							<li><a href="Reflections.html">Refletions</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
