adding first post Collab_Discussion.html

--- a/Collab_Discussion.html
+++ b/Collab_Discussion.html
@@ -65,8 +65,36 @@ Discuss your views on the future of the data scientist. Identify the role and re
 <p>You should demonstrate that you understand the topic covered and ensure you use references to academic literature (journals, books, reports, etc.). This is activity will provide evidence of your personal growth. It will be a component of the e-portfolio, which you can submit at the end of the module for formative feedback.</p>
 
 <p><b>Learning Outcomes:</b><br/>
-Demonstrate a critical awareness of roles and responsibilities (legal, ethical, social and professional) of a Data Science professional.
+Demonstrate a critical awareness of roles and responsibilities (legal, ethical, social and professional) of a Data Science professional.<br/>
 Critically analyse architecture, design, development methodology, querying and the lifecycle of managing large-scale datasets.</p></blockquote>
+		<hr />
+							<h3>Initial Post</h3>
+									<p><span class="image left"><img src="images/circuit.jpg" alt="" /></span>I found both articles to be very interesting and thought they provided some valuable insight into the current job market for data science professionals. However, There Will Be a Shortage of Data Science Jobs in the Next 5 Years? (Saxena, 2019) struck me as simplistic in its suggestion that there will be a shortage of jobs within five years as companies will lean more toward automated machine learning that only requires a single employee to operate. However, I do see a lot of valuable insight in Yıldırım’s article on the challenges data scientists face in a job market that is constantly reacting to new developments (Yıldırım, 2020). Looking at the current prospects for data scientists two years on from these articles, it is clear there is still plenty of growth to be seen.</p>
+
+<p> My prediction for the future of the data scientist is that it will continue to grow as more companies and sectors look to exploit AI, big data and machine learning. By looking at the current state of the job market, it is obvious that there is still a gap in data skills and an appetite to upskill existing staff members.  A recent report from the UK government cited that there is a significant data skills gap in the UK workforce which is impacting companies filling vacancies. For example, it is reported that 49% of firms reported a lack of candidates with technical skills and over 50% reported that staff did not have the required skills in AI, algorithms and programming skills (UK Government, 2021). A similar picture is seen in the United States, evidenced in a July 2023 report from the White House regarding "...empowering Americans to pursue these career paths in cyber." (The White House, 2023). This is in stark contrast to Saxena’s assertion that there would be a job shortage and instead we are currently seeing the opposite. The assumption we can come to is that companies will opt to upskill and train staff, as claimed in the previous government report where 62% of firms reported that staff had received internal or external AI training 12 months prior (UK Government, 2021).</p>
+
+<p> More recently, the World Economic Forum has reported that AI and Big data are key skills that companies will be addressing in their upskilling and reskilling strategies between 2023 and 2027 (World Economic Forum, 2023).  This is more in line with the assertions made by Yıldırım regarding the constant need to retrain and update skills as the world of data science continues to shift and develop (Yıldırım, 2020).</p>
+
+<p> To summarise, I believe the data scientist role and opportunities will continue to grow as companies look at implementing AI and machine learning into it’s business practices. I also believe that companies will look at upskilling existing staff members with strong domain knowledge and expertise so these tools can be used to the fullest extent within the business context. I do believe that the importance of business domain knowledge will grow in the future as more sectors look to utilise AI (Bass, 2018), and data scientists and services will also become more focused on specific sectors.</p>
+
+
+<p><b>References:</b></p><br />
+Bass, A. S. (2018). Non-tech businesses are beginning to use artificial intelligence at scale. [Online]. The Economist. Available at: https://www.economist.com/special-report/2018/03/28/non-tech-businesses-are-beginning-to-use-artificial-intelligence-at-scale?utm_medium=cpc.adword.pd&utm_source=google&ppccampaignID=18156330227&ppcadID=&utm_campaign=a.22brand_pmax&utm_content=conversion.direct-response.anonymous&gclid=EAIaIQobChMIxu2L-6LQgAMVme3tCh3VdwaKEAAYASAAEgLw7vD_BwE&gclsrc=aw.ds [Accessed 11 August 2023].<br />
+
+Saxena, P. (2021). There Will Be a Shortage of Data Science Jobs in the Next 5 Years?. [Online]. Toward Data Science. Available at: https://towardsdatascience.com/there-will-be-a-shortage-of-data-science-jobs-in-the-next-5-years-9f783737ed23 [Accessed 11 August 2023].<br />
+
+UK Government. (2021). 9 key findings from Understanding the UK AI labour market: 2020 Report. [Online]. GOV.UK. Available at: https://www.gov.uk/government/publications/understanding-the-uk-ai-labour-market-2020/9-key-findings-from-understanding-the-uk-ai-labour-market-2020-report [Accessed 11 August 2023].<br />
+
+
+The White House. (2023). FACT SHEET: Biden-⁠Harris Administration Announces National Cyber Workforce and Education Strategy, Unleashing America's Cyber Talent. [Online]. Whitehouse.gov. Available at: https://www.whitehouse.gov/briefing-room/statements-releases/2023/07/31/fact-sheet-biden-%e2%81%a0harris-administration-announces-national-cyber-workforce-and-education-strategy-unleashing-americas-cyber-talent/ [Accessed 11 August 2023].<br />
+
+
+The World Economic Forum. (2023). Future of Jobs Report. [Online]. WEForum. Available at: https://www3.weforum.org/docs/WEF_Future_of_Jobs_2023.pdf [Accessed 11 August 2023].<br />
+
+
+Yıldırım, S. (2020). The Dark Side of the Sexiest Job of the 21st Century. [Online]. Toward Data Science. Available at: https://towardsdatascience.com/the-dark-side-of-the-sexiest-job-of-the-21st-century-fd9c46bf4cae [Accessed 11 August 2023].<br />
+
+</p>
 									
               
 						</div>
