--- a/Collab_Discussion.html
+++ b/Collab_Discussion.html
@@ -79,20 +79,20 @@ Critically analyse architecture, design, development methodology, querying and t
 
 
 <p><b>References:</b></p><br />
-Bass, A. S. (2018). Non-tech businesses are beginning to use artificial intelligence at scale. [Online]. The Economist. Available at: https://www.economist.com/special-report/2018/03/28/non-tech-businesses-are-beginning-to-use-artificial-intelligence-at-scale?utm_medium=cpc.adword.pd&utm_source=google&ppccampaignID=18156330227&ppcadID=&utm_campaign=a.22brand_pmax&utm_content=conversion.direct-response.anonymous&gclid=EAIaIQobChMIxu2L-6LQgAMVme3tCh3VdwaKEAAYASAAEgLw7vD_BwE&gclsrc=aw.ds [Accessed 11 August 2023].<br />
+<p>Bass, A. S. (2018). Non-tech businesses are beginning to use artificial intelligence at scale. [Online]. The Economist. Available at: https://www.economist.com/special-report/2018/03/28/non-tech-businesses-are-beginning-to-use-artificial-intelligence-at-scale?utm_medium=cpc.adword.pd&utm_source=google&ppccampaignID=18156330227&ppcadID=&utm_campaign=a.22brand_pmax&utm_content=conversion.direct-response.anonymous&gclid=EAIaIQobChMIxu2L-6LQgAMVme3tCh3VdwaKEAAYASAAEgLw7vD_BwE&gclsrc=aw.ds [Accessed 11 August 2023].</p>
 
-Saxena, P. (2021). There Will Be a Shortage of Data Science Jobs in the Next 5 Years?. [Online]. Toward Data Science. Available at: https://towardsdatascience.com/there-will-be-a-shortage-of-data-science-jobs-in-the-next-5-years-9f783737ed23 [Accessed 11 August 2023].<br />
+<p>Saxena, P. (2021). There Will Be a Shortage of Data Science Jobs in the Next 5 Years?. [Online]. Toward Data Science. Available at: https://towardsdatascience.com/there-will-be-a-shortage-of-data-science-jobs-in-the-next-5-years-9f783737ed23 [Accessed 11 August 2023].</p>
 
-UK Government. (2021). 9 key findings from Understanding the UK AI labour market: 2020 Report. [Online]. GOV.UK. Available at: https://www.gov.uk/government/publications/understanding-the-uk-ai-labour-market-2020/9-key-findings-from-understanding-the-uk-ai-labour-market-2020-report [Accessed 11 August 2023].<br />
-
-
-The White House. (2023). FACT SHEET: Biden-⁠Harris Administration Announces National Cyber Workforce and Education Strategy, Unleashing America's Cyber Talent. [Online]. Whitehouse.gov. Available at: https://www.whitehouse.gov/briefing-room/statements-releases/2023/07/31/fact-sheet-biden-%e2%81%a0harris-administration-announces-national-cyber-workforce-and-education-strategy-unleashing-americas-cyber-talent/ [Accessed 11 August 2023].<br />
+<p>UK Government. (2021). 9 key findings from Understanding the UK AI labour market: 2020 Report. [Online]. GOV.UK. Available at: https://www.gov.uk/government/publications/understanding-the-uk-ai-labour-market-2020/9-key-findings-from-understanding-the-uk-ai-labour-market-2020-report [Accessed 11 August 2023].</p>
 
 
-The World Economic Forum. (2023). Future of Jobs Report. [Online]. WEForum. Available at: https://www3.weforum.org/docs/WEF_Future_of_Jobs_2023.pdf [Accessed 11 August 2023].<br />
+<p>The White House. (2023). FACT SHEET: Biden-⁠Harris Administration Announces National Cyber Workforce and Education Strategy, Unleashing America's Cyber Talent. [Online]. Whitehouse.gov. Available at: https://www.whitehouse.gov/briefing-room/statements-releases/2023/07/31/fact-sheet-biden-%e2%81%a0harris-administration-announces-national-cyber-workforce-and-education-strategy-unleashing-americas-cyber-talent/ [Accessed 11 August 2023].</p>
 
 
-Yıldırım, S. (2020). The Dark Side of the Sexiest Job of the 21st Century. [Online]. Toward Data Science. Available at: https://towardsdatascience.com/the-dark-side-of-the-sexiest-job-of-the-21st-century-fd9c46bf4cae [Accessed 11 August 2023].<br />
+<p>The World Economic Forum. (2023). Future of Jobs Report. [Online]. WEForum. Available at: https://www3.weforum.org/docs/WEF_Future_of_Jobs_2023.pdf [Accessed 11 August 2023].</p>
+
+
+<p>Yıldırım, S. (2020). The Dark Side of the Sexiest Job of the 21st Century. [Online]. Toward Data Science. Available at: https://towardsdatascience.com/the-dark-side-of-the-sexiest-job-of-the-21st-century-fd9c46bf4cae [Accessed 11 August 2023].</p>
 
 </p>
 									
