typo index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="About Me.html">About Me</a></li>
 							<li><a href="Collab_Discussion.html">Collaborative Discussion</a></li>
-							<li><a href="Python.exercies.html">Python Exercises</a></li>
+							<li><a href="Python.exercises.html">Python Exercises</a></li>
 							<li><a href="SQL_Exercises.html">SQL Exercises</a></li>
 							<li><a href="Reflections.html">Refletions</a></li>
 							<li><a href="elements.html">Elements</a></li>
