--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 										<img src="images/circuit.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2> </h2>
+										<h2>Python Exercises </h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -105,7 +105,7 @@
 										<img src="images/starburst.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2> </h2>
+										<h2>SQL Exercises</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -113,10 +113,10 @@
 								</article>
 								<article class="style6">
 									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+										<img src="images/circuit2.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2> </h2>
+										<h2>Data Report: Transport for Wales</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
