--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 									<span class="image">
 										<img src="images/cellophane.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="Collab_Discussion.html">
 										<h2>Summary: Collaborative Discussion</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
