--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<li><a href="Collab_Discussion.html">Collaborative Discussion</a></li>
 							<li><a href="Python_exercises.html">Python Exercises</a></li>
 							<li><a href="SQL_Exercises.html">SQL Exercises</a></li>
-							<li><a href="Reflections.html">Refletions</a></li>
+							<li><a href="Reflections.html">Reflections</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
 					</nav>
