--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									<span class="image">
 										<img src="images/optics.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="About_Me.html">
 										<h2>About Me</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -93,7 +93,7 @@
 									<span class="image">
 										<img src="images/circuit.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="Python_exercises.html">
 										<h2>Python Exercises </h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -104,7 +104,7 @@
 									<span class="image">
 										<img src="images/starburst.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="SQL_Exercises.html">
 										<h2>SQL Exercises</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
@@ -115,13 +115,22 @@
 									<span class="image">
 										<img src="images/circuit2.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Data Report: Transport for Wales</h2>
+									<a href="Data_Report.html">
+										<h2>Data Report: Transport for Wales Pt 1</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
 								</article>
+							        <article class="style6">
+									<span class="image">
+										<img src="images/circuit2.jpg" alt="" />
+									</span>
+									<a href="Data_Report2.html">
+										<h2>Data Report: Transport for Wales Pt. 2</h2>
+										<div class="content">
+											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+										</div>
 							</section>
 						</div>
 					</div>
