--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 							<li><a href="Collab_Discussion.html">Collaborative Discussion</a></li>
 							<li><a href="Python_exercises.html">Python Exercises</a></li>
 							<li><a href="SQL_Exercises.html">SQL Exercises</a></li>
+							<li><a href="Data_Report.html">Data Report Pt 1</a></li>
+							<li><a href="Data_Report2.html">Data Report Pt 2</a></li>
 							<li><a href="Reflections.html">Reflections</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
