--- a/Collab_Discussion.html
+++ b/Collab_Discussion.html
@@ -41,12 +41,12 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="About Me.html">About Me</a></li>
-							<li><a href="Collab_Discussion.html">Collaborative Discussion</a></li>
+							<li><a href="Collab_Discussion.html">Collaborative Discussion 1</a></li>
+							<li><a href="Collab_Discussion2.html">Collaborative Discussion 2</a></li>							
 							<li><a href="Python_exercises.html">Python Exercises</a></li>
 							<li><a href="SQL_Exercises.html">SQL Exercises</a></li>
 							<li><a href="Data_Report.html">Data Report Pt 1</a></li>
 							<li><a href="Data_Report2.html">Data Report Pt 2</a></li>
-							<li><a href="Reflections.html">Reflections</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
 					</nav>
