--- a/About_Me.html
+++ b/About_Me.html
@@ -40,9 +40,13 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
+							<li><a href="About Me.html">About Me</a></li>
+							<li><a href="Collab_Discussion.html">Collaborative Discussion 1</a></li>
+							<li><a href="Collab_Discussion2.html">Collaborative Discussion 2</a></li>							
+							<li><a href="Python_exercises.html">Python Exercises</a></li>
+							<li><a href="SQL_Exercises.html">SQL Exercises</a></li>
+							<li><a href="Data_Report.html">Data Report Pt 1</a></li>
+							<li><a href="Data_Report2.html">Data Report Pt 2</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
 					</nav>
