Update menu and tiles index.html

--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="About Me.html">About Me</a></li>
-							<li><a href="Collab_Discussion.html">Collaborative Discussion</a></li>
+							<li><a href="Collab_Discussion.html">Collaborative Discussion 1</a></li>
+							<li><a href="Collab_Discussion2.html">Collaborative Discussion 2</a></li>							
 							<li><a href="Python_exercises.html">Python Exercises</a></li>
 							<li><a href="SQL_Exercises.html">SQL Exercises</a></li>
 							<li><a href="Data_Report.html">Data Report Pt 1</a></li>
 							<li><a href="Data_Report2.html">Data Report Pt 2</a></li>
-							<li><a href="Reflections.html">Reflections</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
 					</nav>
@@ -65,7 +65,7 @@
 									<a href="About_Me.html">
 										<h2>About Me</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Some information on me!</p>
 										</div>
 									</a>
 								</article>
@@ -74,9 +74,9 @@
 										<img src="images/cellophane.jpg" alt="" />
 									</span>
 									<a href="Collab_Discussion.html">
-										<h2>Summary: Collaborative Discussion</h2>
+										<h2>Summary: Collaborative Discussion 1</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>My initial amd summary post from our first discussion.</p>
 										</div>
 									</a>
 								</article>
@@ -84,10 +84,10 @@
 									<span class="image">
 										<img src="images/neon.jpg" alt="" />
 									</span>
-									<a href="Reflections.html">
-										<h2>Reflections</h2>
+									<a href="Collab_Discussion2.html">
+										<h2>Collaborative Discussion 2</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>My initial amd summary post from our second discussion..</p>
 										</div>
 									</a>
 								</article>
@@ -98,7 +98,7 @@
 									<a href="Python_exercises.html">
 										<h2>Python Exercises </h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Exercices in Python coding and some formative computer science exercises.</p>
 										</div>
 									</a>
 								</article>
@@ -109,7 +109,7 @@
 									<a href="SQL_Exercises.html">
 										<h2>SQL Exercises</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>SQL Exercises using an example database on a Bus company.</p>
 										</div>
 									</a>
 								</article>
@@ -120,7 +120,7 @@
 									<a href="Data_Report.html">
 										<h2>Data Report: Transport for Wales Pt 1</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>My initial report on the Transport in Wales dataset. Included bakcground and plan.</p>
 										</div>
 									</a>
 								</article>
@@ -131,7 +131,7 @@
 									<a href="Data_Report2.html">
 										<h2>Data Report: Transport for Wales Pt. 2</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>My final data analysis report. Includes charts and ideas for future development.</p>
 										</div>
 							</section>
 						</div>
