--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 										<img src="images/cellophane.jpg" alt="" />
 									</span>
 									<a href="Collab_Discussion.html">
-										<h2>Summary: Collaborative Discussion 1</h2>
+										<h2>Collaborative Discussion 1</h2>
 										<div class="content">
-											<p>My initial amd summary post from our first discussion.</p>
+											<p>My initial and summary post from our first discussion.</p>
 										</div>
 									</a>
 								</article>
